First version of module for release

--- a/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
@@ -94,6 +94,13 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>6 - ОИК</td>
+                    <td>
+                        <button class="btn btn-xs btn-primary"
+                                [routerLink]="['/reporting/NBReporting/consolidatedKZTForm6/', reportId]">REPORT</button>
+                    </td>
+                </tr>
+                <tr>
                     <td>7 - РФИ</td>
                     <td>
                         <button class="btn btn-xs btn-primary"
