1 - sql inserts for JULY 2017 reports 2 - 2018 year added

--- a/nicnbk-ui-angular2/src/app/reporting/view/main.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/main.nb.reporting.component.html
@@ -69,6 +69,7 @@
                                 <select class="form-control" [(ngModel)]="reportYear">
                                     <option value="2016">2016</option>
                                     <option value="2017">2017</option>
+                                    <option value="2017">2018</option>
                                 </select>
                             </div>
                         </div>
