--- a/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div [ngBusy]="busy" class="row">
         <div class="Absolute-Center is-Responsive">
         <!--<div class="col-md-4 col-md-offset-4">-->
             <div *ngIf="errorMsg != null">
