REPORTING MODULE: 1) updated JUL 2017 reports sql 2) logging of user actions 3) error messages to UI (e,g. when currency rate for date is missing)
OTHER:
2)busy loading for login component

--- a/nicnbk-ui-angular2/public/css/common.css
+++ b/nicnbk-ui-angular2/public/css/common.css
@@ -7,6 +7,20 @@ label {
     font-weight: normal !important;
 }
 
+@media print {
+    body * {
+        visibility: hidden;
+    }
+    #section-to-print, #section-to-print * {
+        visibility: visible;
+    }
+    #section-to-print {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+}
+
 /**/
 .btn-file {
     position: relative;
