--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -43,19 +43,15 @@
                     <li>
                         <a data-toggle="tab" href="#performanceFund">PERFORMANCE</a>
                     </li>
+                    <li>
+                        <a data-toggle="tab" href="#createOnePager">CREATE ONE PAGER</a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div id="overview" class="tab-pane fade in active">
                         <div style="position: relative;">
                             <div [ngBusy]="busy">
                                 <br/>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="col-md-1 pull-left">
-                                            <button type="submit" class="btn btn-success" (click)="createOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE ONE PAGER</button>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="row withpadding">
                                     <h4>Manager Details</h4>
                                     <table class=" col-md-4 table-striped table-condensed">
@@ -806,6 +802,154 @@
                                                     <!--<button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePerformanceAndRecalculateStatistics()" [disabled]="fund.id == 0 || fund.id == null">-->
                                                         <!--SAVE and RECALCULATE the Key Fund Statistics-->
                                                     <!--</button>-->
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <hr style="border-top: 1px solid #B5AEAE"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="createOnePager" class="tab-pane fade">
+                        <div style="position: relative;">
+                            <div [ngBusy]="busy">
+                                <br>
+                                <div class="row">
+                                    <div style="text-align: center">
+                                        <h4>{{fund.fundName}} One Pager Creator</h4>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="pull-right">
+                                                    <button type="submit" class="btn btn-success" (click)="createOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <div class="pull-left">
+                                            <form #yourForm="ngForm" (ngSubmit)="onSubmitGrossCF()" *ngIf="canEdit()">
+                                                <h4>Upload a new portion of the Gross Cash Flow</h4>
+                                                <input type="file" #fileupload name="myFile" (change)="fileChange(fileupload.files)"/>
+                                                <button type="submit" class="btn btn-success" [disabled]="fund.id == 0 || fund.id == null">Submit</button>
+                                            </form>
+                                        </div>
+                                        <br>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
+                                                <th>Company</th>
+                                                <th>Cash invested</th>
+                                                <th>Realized Proceeds</th>
+                                                <th>Unrealized Value</th>
+                                                <th>Total Value</th>
+                                                <th>Multiple</th>
+                                                <th>Auto calculation of the Total Value and Multiple</th>
+                                                <th>Gross IRR, %</th>
+                                                <th>Net IRR, %</th>
+                                                <th>Notice</th>
+                                                <th></th>
+                                            </tr>
+                                            <tr *ngFor="let performance of fund.companyPerformance">
+                                                <td>
+                                                    <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #companyName="ngModel"/>
+                                                    <div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">
+                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" (ngModelChange)="autoCalculationTotalAndMultiple(performance)" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
+                                                    <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" (ngModelChange)="autoCalculationTotalAndMultiple(performance)" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #realized="ngModel"/>
+                                                    <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" (ngModelChange)="autoCalculationTotalAndMultiple(performance)" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #unrealized="ngModel"/>
+                                                    <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+
+                                                <td *ngIf="performance.autoCalculation == false">
+                                                    <input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="performance.autoCalculation" #totalValue="ngModel"/>
+                                                    <div [hidden]="totalValue.valid || totalValue.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+                                                <td *ngIf="performance.autoCalculation == true" style="font-size: small; vertical-align: middle">
+                                                    {{(performance.totalValue/1000000) | number:'1.1-2'}}m
+                                                </td>
+
+                                                <td class="col-md-1" *ngIf="performance.autoCalculation == false">
+                                                    <input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" [disabled]="performance.autoCalculation" #multiple="ngModel"/>
+                                                    <div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+                                                <td *ngIf="performance.autoCalculation == true" style="font-size: small; vertical-align: middle">
+                                                    {{performance.multiple | number:'1.1-1'}}x
+                                                </td>
+
+                                                <td class="col-md-1">
+                                                    <input type="checkbox" [(ngModel)]="performance.autoCalculation" (ngModelChange)="autoCalculationTotalAndMultiple(performance)">
+                                                </td>
+
+                                                <td class="col-md-1">
+                                                    <input type="text" class="form-control" name="grossIrr" [(ngModel)]="performance.grossIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #grossIrr="ngModel"/>
+                                                    <div [hidden]="grossIrr.valid || grossIrr.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+
+                                                <td class="col-md-1">
+                                                    <input type="text" class="form-control" name="netIrr" [(ngModel)]="performance.netIrr" placeholder="-" pattern="[-]?[0-9]*\.?[0-9]+" #netIrr="ngModel"/>
+                                                    <div [hidden]="netIrr.valid || netIrr.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </td>
+
+                                                <td class="col-md-2">
+                                                    <div *ngIf="!performancesComparison(performance)">
+                                                        <p style="color:red;">The row does not match any of the IDD</p>
+                                                    </div>
+                                                    <div *ngIf="performancesComparison(performance)">
+                                                        <p>The row matches (to some extent) one of the IDD</p>
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowPerformance(performance)">
+                                                        <span class="glyphicon glyphicon-minus"></span>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                        </table>
+
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="col-md-1 pull-left">
+                                                    <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowPerformance()">
+                                                        Add company
+                                                    </button>
+                                                </div>
+                                                <div class="pull-right">
+                                                    <button type="submit" class="btn btn-success" (click)="createOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
                                                 </div>
                                             </div>
                                         </div>
