--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -830,14 +830,14 @@
                                         <div class="pull-right">
                                             <button type="submit" class="btn btn-success" (click)="createOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
                                         </div>
-                                        <div class="pull-left">
-                                            <form>
-                                                <h4>Upload a GP's logo</h4>
-                                                <input type="file" #fileUploadGP (change)="fileLogoChange(fileUploadGP.files, 'GP')"/>
-                                                <h4>Upload an NIC's logo</h4>
-                                                <input type="file" #fileUploadNIC (change)="fileLogoChange(fileUploadNIC.files, 'NIC')"/>
-                                            </form>
-                                        </div>
+                                        <!--<div class="pull-left">-->
+                                            <!--<form>-->
+                                                <!--<h4>Upload a GP's logo</h4>-->
+                                                <!--<input type="file" #fileUploadGP (change)="fileLogoChange(fileUploadGP.files, 'GP')"/>-->
+                                                <!--<h4>Upload an NIC's logo</h4>-->
+                                                <!--<input type="file" #fileUploadNIC (change)="fileLogoChange(fileUploadNIC.files, 'NIC')"/>-->
+                                            <!--</form>-->
+                                        <!--</div>-->
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
