--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -847,7 +847,14 @@
                                             </tr>
                                             <tr *ngFor="let description of fund.onePagerDescriptions">
                                                 <td>
-                                                    <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #companyName="ngModel"/>
+                                                    <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" #companyName="ngModel"/>
+                                                    <div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">
+                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" #companyName="ngModel"/>
                                                     <div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">
                                                         Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
                                                     </div>
